--- a/nginx.conf
+++ b/nginx.conf
@@ -55,10 +55,10 @@ http {
     resolver 8.8.8.8;    
                                                                                                                     
     location / {                                                                                                      
-      proxy_pass http://$domain;                                                                                      
+      proxy_pass http://$domain; # replace http:// with $protocol to enable SSL with self signed cert
       proxy_redirect off;                                                                                             
       proxy_set_header Host $host;                                                                                    
-                                                                                                                    
+      
       subs_filter_types text/html text/css text/xml;                                                                  
       subs_filter "</head>" "<script type='text/javascript' src='http://proxy/inject.js'></script></head>";
                                                                                                                     
