Added gzip support

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,7 @@ http {
   access_log   /var/log/nginx.proxy.access.log  main;                                                                
   sendfile     on;                                                                                                   
   tcp_nopush   on;                                                                                                   
+  gzip         on;
   server_names_hash_bucket_size 128;                                                                              
 
   # Proxy assets
