Tidied regex and proxy_pass arguments

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
   tcp_nopush   on;                                                                                                   
   gzip         on;
   server_names_hash_bucket_size 128;                                                                              
-
+  
   # Proxy assets
   server {
     server_name proxy;
@@ -35,30 +35,31 @@ http {
 
   # HTTPS forward proxy
   server {
-       listen 443 ssl;
-       server_name proxy-ssl;
+       listen 0.0.0.0:443 ssl;
+       server_name ~^(www\.)?(.+)$;
+
+       resolver 8.8.8.8;
 
        ssl_certificate /home/proxy/proxy.cert;
        ssl_certificate_key /home/proxy/proxy.key;
 
        location / {
-           proxy_pass http://localhost:8080;
+           proxy_pass https://$http_host$uri$is_args$args; 
        }
   }
 
   # HTTP forward proxy
-  server {                                                                                                           
-                                                                                                                   
-    server_name ~^(www\.)?(?<domain>.+)$;                                                                            
+  server {                                                                                                                                                                                                                             
+    server_name ~^(www\.)?(.+)$;                                                                            
     access_log /var/log/proxy.access.log main;                                                                       
     error_log /var/log/proxy.error.log crit;                                                                         
     listen 0.0.0.0:8080;                                                                                             
+
     resolver 8.8.8.8;    
                                                                                                                     
     location / {                                                                                                      
-      proxy_pass http://$domain; # replace http:// with $protocol to enable SSL with self signed cert
-      proxy_redirect off;                                                                                             
-      proxy_set_header Host $host;                                                                                    
+      proxy_pass http://$http_host$uri$is_args$args;
+    # proxy_set_header Host $host;                                                                                    
       
       subs_filter_types text/html text/css text/xml;                                                                  
       subs_filter "</head>" "<script type='text/javascript' src='http://proxy/inject.js'></script></head>";
